--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
         "h5p"
     ],
     "require": {
-        "h5p/h5p-core": "1.24.4",
-        "sabberworm/php-css-parser": "^8.6"
+        "h5p/h5p-core": "1.24.4"
     }
 }
